# 2020AndroidPro

./: README.md
LearningVideo/: local.properties
TestOpenGLES/app/: build.gradle
XPlay/: settings.gradle
XPlay/app/: build.gradle
XPlay/app/src/main/: AndroidManifest.xml
XPlay/gradle/wrapper/: gradle-wrapper.properties
XiaCaoJun_Teacher/TestOpenGLES/: settings.gradle
XiaCaoJun_Teacher/TestOpenGLES/gradle/wrapper/: gradle-wrapper.properties
XiaCaoJun_Teacher/testFFmpeg/gradle/wrapper/: gradle-wrapper.properties
XiangXueClass/MyButton/: settings.gradle
XiangXueClass/MyButton/app/: build.gradle
XiangXueClass/MyButton/gradle/wrapper/: gradle-wrapper.properties
XiangXueClass/MyEditText/: settings.gradle
XiangXueClass/MyEditText/app/: build.gradle
XiangXueClass/MyEditText/gradle/wrapper/: gradle-wrapper.properties
XiangXueClass/MyImageView/: settings.gradle
XiangXueClass/MyImageView/app/: build.gradle
XiangXueClass/MyImageView/gradle/wrapper/: gradle-wrapper.properties
XiangXueClass/MyTextView/app/: build.gradle
XiangXueClass/MyTextView/gradle/wrapper/: gradle-wrapper.properties
XiangXueClass/ViewPagerAndFragment/: settings.gradle
XiangXueClass/ViewPagerAndFragment/app/: build.gradle
XiangXueClass/ViewPagerAndFragment/gradle/wrapper/: gradle-wrapper.properties
XiangXueClass/XJQ_AndroidBasis/: settings.gradle
XiangXueClass/XJQ_AndroidBasis/app/: build.gradle
XiangXueClass/XJQ_AndroidBasis/myalertdialog/: build.gradle
XiangXueClass/XJQ_AndroidBasis/myconstraintlayout/: build.gradle
XiangXueClass/XJQ_AndroidBasis/myframelayout/: build.gradle
XiangXueClass/XJQ_AndroidBasis/mygridlayout/: build.gradle
XiangXueClass/XJQ_AndroidBasis/mylinearlayout/: build.gradle
XiangXueClass/XJQ_AndroidBasis/mynotification/: build.gradle
XiangXueClass/XJQ_AndroidBasis/mypopupwindow/: build.gradle
XiangXueClass/XJQ_AndroidBasis/myprogressbar/: build.gradle
XiangXueClass/XJQ_AndroidBasis/myrelativelayout/: build.gradle
XiangXueClass/XJQ_AndroidBasis/mytablelayout/: build.gradle
XiangXueClass/XJQ_AndroidBasis/mytoolbar/: build.gradle
XiangXueClass/XJQ_AnimProperty/: settings.gradle
XiangXueClass/XJQ_AnimProperty/app/: build.gradle
XiangXueClass/XJQ_AnimTweened/: settings.gradle
XiangXueClass/XJQ_AnimTweened/app/: build.gradle
XiangXueClass/XJQ_FragmentManagers/: settings.gradle
XiangXueClass/XJQ_FragmentManagers/app/: build.gradle
XiangXueClass/XJQ_LayoutParams/: settings.gradle
XiangXueClass/XJQ_LayoutParams/app/: build.gradle
XiangXueClass/XJQ_ListView/: settings.gradle
XiangXueClass/XJQ_ListView/app/: build.gradle
XiangXueClass/XJQ_RecyclerView/: settings.gradle
XiangXueClass/XJQ_RecyclerView/app/: build.gradle
XiangXueClass/XJQ_ViewPager/: settings.gradle
XiangXueClass/XJQ_ViewPager/app/: build.gradle
XiangXueClass/XJQ_anim/: settings.gradle
XiangXueClass/XJQ_anim/app/: build.gradle
XiangXueClass/XJQ_fragmentbase/: settings.gradle
XiangXueClass/XJQ_fragmentbase/app/: build.gradle
YangWanli_Teacher/AndroidOpenSLAudio/: settings.gradle
YangWanli_Teacher/AndroidOpenSLAudio/app/: build.gradle
YangWanli_Teacher/AndroidOpenSLAudio/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
YangWanli_Teacher/AudioRecord/: settings.gradle
YangWanli_Teacher/AudioRecord/app/: build.gradle
YangWanli_Teacher/JniThread/: settings.gradle
YangWanli_Teacher/JniThread/app/: build.gradle
YangWanli_Teacher/LivePusher/: settings.gradle
YangWanli_Teacher/LivePusher/app/: build.gradle
YangWanli_Teacher/LivePusher/app/src/main/cpp/: CMakeLists.txt  CallJava.cpp  CallJava.h  RtmpPush.cpp  RtmpPush.h  WLQueue.cpp  WLQueue.h  native-lib.cpp  wlPush.cpp
YangWanli_Teacher/MyMusic/: settings.gradle
YangWanli_Teacher/MyMusic/app/: build.gradle
YangWanli_Teacher/MyMusic/myplayer/: build.gradle
YangWanli_Teacher/MyMusic/myplayer/src/main/cpp/: CMakeLists.txt  CallJava.cpp  CallJava.h  WLAudio.cpp  WLAudio.h  WLBufferQueue.cpp  WLBufferQueue.h  WLFFmpeg.cpp  WLFFmpeg.h  WLPcmBean.cpp  WLPcmBean.h  WLPlayStatus.cpp  WLPlayStatus.h  WLQueue.cpp  WLQueue.h  WLVideo.cpp  WLVideo.h  native-lib.cpp
YangWanli_Teacher/MyMusic/myplayer/src/main/cpp/log/: androidLog.h
YangWanli_Teacher/OpenGLC++/NativeOpenGLDemo/: settings.gradle
YangWanli_Teacher/OpenGLDemo/app/: build.gradle
YangWanli_Teacher/OpenSLESRecord/: settings.gradle
YangWanli_Teacher/OpenSLESRecord/app/: build.gradle
YangWanli_Teacher/OpenSLESRecord/app/src/main/cpp/: CMakeLists.txt  RecordBuffer.cpp  RecordBuffer.h  native-lib.cpp
YangWanli_Teacher/OpenglESEGL/: settings.gradle
YangWanli_Teacher/OpenglESEGL/app/: build.gradle
android-transcoder/: local.properties
android-transcoder/gradle/wrapper/: gradle-wrapper.properties
android-transcoder/lib/: build.gradle
glumesNDK/JNIAccessField/app/: build.gradle
glumesNDK/JNIBitMap/app/: build.gradle
glumesNDK/JNIConstructorClass/: settings.gradle
glumesNDK/JNIDynamicLoad/: settings.gradle
glumesNDK/JNIDynamicLoad/app/: build.gradle
glumesNDK/JNIException/: settings.gradle
glumesNDK/JNIException/app/: build.gradle
glumesNDK/JNIInvokeMethod/: settings.gradle
glumesNDK/JNIInvokeMethod/app/: build.gradle
glumesNDK/JNIReferenceType/app/: build.gradle
glumesNDK/JNIString/: settings.gradle
glumesNDK/JNIString/app/: build.gradle
glumesNDK/JNIThread/app/: build.gradle
glumesNDK/JNIThreadSynchronize/: settings.gradle
glumesNDK/JNIThreadSynchronize/app/: build.gradle
glumesNDK/JNI_Produce_Consumer/app/: build.gradle
glumes_teacher/glumesNDK/JNIAccessField/: settings.gradle
glumes_teacher/glumesNDK/JNIBitMap/: settings.gradle
glumes_teacher/glumesNDK/JNIReference/: settings.gradle
glumes_teacher/glumesNDK/JNIReferenceType/: settings.gradle
glumes_teacher/glumesNDK/JNIThread/: settings.gradle
glumes_teacher/glumesNDK/JNI_Produce_Consumer/: settings.gradle
grafika/: local.properties
testFFmpeg/: settings.gradle
testFFmpeg/app/: build.gradle
testOpenSL/: settings.gradle
testOpenSL/app/: build.gradle
testOpenSL/gradle/wrapper/: gradle-wrapper.properties
(+736 files in other folders)
